backend/target/debug/build/atomic-5fef1213ebeff3ec/stderr
error[E0658]: use of unstable library feature 'integer_atomics'
 --> <anon>:1:26
  |
1 | pub fn probe() { let _ = core::sync::atomic::AtomicU128::compare_exchange; }
  |                          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: see issue #99069 <https://github.com/rust-lang/rust/issues/99069> for more information
  = help: add `#![feature(integer_atomics)]` to the crate attributes to enable
  = note: this compiler was built on 2024-06-27; consider upgrading it if it is out of date

error[E0658]: use of unstable library feature 'integer_atomics'
 --> <anon>:1:26
  |
1 | pub fn probe() { let _ = core::sync::atomic::AtomicU128::compare_exchange; }
  |                          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: see issue #99069 <https://github.com/rust-lang/rust/issues/99069> for more information
  = help: add `#![feature(integer_atomics)]` to the crate attributes to enable
  = note: this compiler was built on 2024-06-27; consider upgrading it if it is out of date

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0658`.
error[E0658]: use of unstable library feature 'integer_atomics'
 --> <anon>:1:26
  |
1 | pub fn probe() { let _ = core::sync::atomic::AtomicI128::compare_exchange; }
  |                          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: see issue #99069 <https://github.com/rust-lang/rust/issues/99069> for more information
  = help: add `#![feature(integer_atomics)]` to the crate attributes to enable
  = note: this compiler was built on 2024-06-27; consider upgrading it if it is out of date

error[E0658]: use of unstable library feature 'integer_atomics'
 --> <anon>:1:26
  |
1 | pub fn probe() { let _ = core::sync::atomic::AtomicI128::compare_exchange; }
  |                          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: see issue #99069 <https://github.com/rust-lang/rust/issues/99069> for more information
  = help: add `#![feature(integer_atomics)]` to the crate attributes to enable
  = note: this compiler was built on 2024-06-27; consider upgrading it if it is out of date

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0658`.
error[E0658]: use of unstable library feature 'integer_atomics'
 --> <anon>:1:26
  |
1 | pub fn probe() { let _ = std::sync::atomic::AtomicU128::compare_exchange; }
  |                          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: see issue #99069 <https://github.com/rust-lang/rust/issues/99069> for more information
  = help: add `#![feature(integer_atomics)]` to the crate attributes to enable
  = note: this compiler was built on 2024-06-27; consider upgrading it if it is out of date

error[E0658]: use of unstable library feature 'integer_atomics'
 --> <anon>:1:26
  |
1 | pub fn probe() { let _ = std::sync::atomic::AtomicU128::compare_exchange; }
  |                          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: see issue #99069 <https://github.com/rust-lang/rust/issues/99069> for more information
  = help: add `#![feature(integer_atomics)]` to the crate attributes to enable
  = note: this compiler was built on 2024-06-27; consider upgrading it if it is out of date

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0658`.
error[E0658]: use of unstable library feature 'integer_atomics'
 --> <anon>:1:26
  |
1 | pub fn probe() { let _ = std::sync::atomic::AtomicI128::compare_exchange; }
  |                          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: see issue #99069 <https://github.com/rust-lang/rust/issues/99069> for more information
  = help: add `#![feature(integer_atomics)]` to the crate attributes to enable
  = note: this compiler was built on 2024-06-27; consider upgrading it if it is out of date

error[E0658]: use of unstable library feature 'integer_atomics'
 --> <anon>:1:26
  |
1 | pub fn probe() { let _ = std::sync::atomic::AtomicI128::compare_exchange; }
  |                          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: see issue #99069 <https://github.com/rust-lang/rust/issues/99069> for more information
  = help: add `#![feature(integer_atomics)]` to the crate attributes to enable
  = note: this compiler was built on 2024-06-27; consider upgrading it if it is out of date

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0658`.
